feat: 추론 과정 표출 기능 추가
- LLM 모델 Qwen3 32B 로 변경